// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupBody renders with scrollbars 1`] = `
<div
  className="css-1eyc6ve external-class"
>
  <div
    className="css-14447ek"
  >
    content
  </div>
</div>
`;

exports[`PopupBody renders without scrollbars 1`] = `
<div
  className="css-ug0wwi external-class"
>
  content
</div>
`;
